# ticket-whisperer

./: README.md  example_validator_workflow.py  pyproject.toml
src/whisperer/: __init__.py
src/whisperer/agents/: __init__.py
src/whisperer/agents/jira_agent/: __init__.py  agent.py
src/whisperer/agents/main_agent/: __init__.py  agent.py
src/whisperer/mcp_servers/: __init__.py  jira_server_fastmcp.py  models.py  server.py
